[package]
name = "isosurface"
version = "0.0.4"
authors = ["Tristam MacDonald <swiftcoder@gmail.com>"]
license = "Apache-2.0"
description = "Isosurface extraction algorithms"
repository = "https://github.com/swiftcoder/isosurface"
readme = "README.md"

[dev-dependencies]
glium = "0.25.1"
glium_text_rusttype = "0.3.2"
cgmath = "0.17.0"
criterion = "0.3"

[profile.dev]
opt-level = 2

[[bench]]
name = "mc_benchmark"
harness = false